# spotify-control

./: Cargo.toml  readme.md
src/: api_list.rs  auth.rs  error.rs  lib.rs  main.rs  models.rs  token.rs
