[package]
name = "spotify-control"
version = "0.1.0"
edition = "2024"

[lib]
name = "spotify_control"
path = "src/lib.rs"
 
[[bin]]
name = "spotify-control"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["form", "json", "query", "rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12.0"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread"] }
